update_tests